crates/zeo/tests/suite/checks/snapshots/suite__checks__clif__clif_snapshot_frozen_literal_fold.snap
---
source: crates/zeo/tests/checks/clif.rs
expression: "clif_of(\"p \\\"lit\\\".freeze\\n\")"
---
;; zeo_toplevel
function %zeo_toplevel(i64) -> i32 ccall {
    ss0 = explicit_slot 24, align = 8
    ss1 = explicit_slot 0, align = 8
    ss2 = explicit_slot 8, align = 8
    ss3 = explicit_slot 24, align = 8
    ss4 = explicit_slot 24, align = 8
    ss5 = explicit_slot 24, align = 8
    ss6 = explicit_slot 24, align = 8
    gv0 = symbol colocated %zeo_rodata
    gv1 = symbol colocated %zeo_syms
    gv2 = symbol %zeo_rt_gates
    gv3 = symbol %zeo_rt_pending_interrupts
    gv4 = symbol colocated %zeo_callsites
    sig0 = () -> i64 ccall
    sig1 = (i64, i64, i64, i64, i32, i32) -> i32 ccall
    sig2 = (i64, i64, i64, i64, i32, i32) ccall
    sig3 = () -> i32 ccall
    sig4 = (i64) ccall
    sig5 = (i64) ccall
    sig6 = (i64, i64, i64, i64, i64, i64, i32, i32, i32, i64) ccall
    sig7 = (i32, i64, i64, i64, i64, i64, i32, i32) ccall
    sig8 = (i32) ccall
    sig9 = (i64, i64, i8 uext, i64) ccall
    sig10 = (i64, i32, i64, i32, i64, i64, i64, i64) -> i32 ccall
    sig11 = (i64) ccall
    sig12 = () ccall
    fn0 = colocated %zeo_rt_frame_hot sig0
    fn1 = colocated %zeo_rt_frame_enter sig1
    fn2 = colocated %zeo_rt_frame_push sig2
    fn3 = colocated %zeo_rt_check_ints sig3
    fn4 = colocated %zeo_rt_main_object sig4
    fn5 = colocated %zeo_rt_pool_push sig5
    fn6 = colocated %zeo_rt_binding_new sig6
    fn7 = colocated %zeo_rt_const_set_at sig7
    fn8 = colocated %zeo_rt_set_line sig8
    fn9 = colocated %zeo_rt_str_lit sig9
    fn10 = colocated %zeo_rt_send_value_cached sig10
    fn11 = colocated %zeo_rt_pool_reset sig11
    fn12 = colocated %zeo_rt_frame_pop sig12

block0(v0: i64):
    v1 = symbol_value.i64 gv0
    v2 = symbol_value.i64 gv1
    v3 = iconst.i64 2
    v4 = iconst.i64 2
    v5 = iadd v1, v4  ; v4 = 2
    v6 = iconst.i64 6
    v7 = iconst.i32 0
    v8 = call fn0()
    v9 = symbol_value.i64 gv2
    v10 = load.i16 notrap aligned v9
    v11 = iconst.i16 512
    v12 = band v10, v11  ; v11 = 512
    brif v12, block2, block3

block2 cold:
    v13 = call fn1(v1, v3, v5, v6, v7, v7)  ; v3 = 2, v6 = 6, v7 = 0, v7 = 0
    brif v13, block1, block5

block5:
    jump block4

block3:
    v14 = load.i64 notrap aligned v8
    v15 = load.i64 notrap aligned v8+16
    v16 = icmp eq v14, v15
    brif v16, block6, block7

block6 cold:
    call fn2(v1, v3, v5, v6, v7, v7)  ; v3 = 2, v6 = 6, v7 = 0, v7 = 0
    jump block8

block7:
    store.i64 notrap aligned v1, v14
    store.i64 notrap aligned v3, v14+8  ; v3 = 2
    store.i64 notrap aligned v5, v14+16
    store.i64 notrap aligned v6, v14+24  ; v6 = 6
    store.i32 notrap aligned v7, v14+32  ; v7 = 0
    store.i32 notrap aligned v7, v14+36  ; v7 = 0
    v17 = load.i64 notrap aligned v8+24
    v18 = load.i64 notrap aligned v8+32
    v19 = isub v17, v18
    v20 = iconst.i64 24
    v21 = udiv v19, v20  ; v20 = 24
    v22 = ireduce.i32 v21
    store notrap aligned v22, v14+40
    v23 = iconst.i64 48
    v24 = iadd.i64 v14, v23  ; v23 = 48
    store notrap aligned v24, v8
    jump block8

block8:
    v25 = symbol_value.i64 gv3
    v26 = load.i32 notrap aligned v25
    brif v26, block9, block10

block9 cold:
    v27 = call fn3()
    brif v27, block1, block10

block10:
    jump block4

block4:
    v28 = stack_addr.i64 ss0
    call fn4(v28)
    call fn5(v28)
    v29 = stack_addr.i64 ss1
    v30 = iconst.i64 0
    v31 = stack_addr.i64 ss2
    v32 = iconst.i64 2
    v33 = iadd.i64 v1, v32  ; v32 = 2
    v34 = iconst.i64 6
    v35 = iconst.i32 0
    v36 = iconst.i32 0
    v37 = iconst.i32 -1
    v38 = stack_addr.i64 ss3
    call fn6(v28, v29, v31, v30, v33, v34, v35, v36, v37, v38)  ; v30 = 0, v34 = 6, v35 = 0, v36 = 0, v37 = -1
    v39 = stack_addr.i64 ss3
    v40 = load.i8 notrap aligned v39
    v41 = iconst.i8 16
    v42 = icmp uge v40, v41  ; v41 = 16
    brif v42, block11, block12

block11:
    call fn5(v39)
    jump block12

block12:
    v43 = iconst.i64 8
    v44 = iadd.i64 v1, v43  ; v43 = 8
    v45 = iconst.i64 16
    v46 = iconst.i64 2
    v47 = iadd.i64 v1, v46  ; v46 = 2
    v48 = iconst.i64 6
    v49 = iconst.i32 0
    v50 = iconst.i32 0
    v51 = iconst.i32 0
    call fn7(v49, v44, v45, v39, v47, v48, v50, v51)  ; v49 = 0, v45 = 16, v48 = 6, v50 = 0, v51 = 0
    v52 = load.i64 notrap aligned v8+24
    v53 = load.i64 notrap aligned v8+32
    v54 = isub v52, v53
    v55 = iconst.i64 24
    v56 = udiv v54, v55  ; v55 = 24
    v57 = iconst.i32 1
    v58 = symbol_value.i64 gv2
    v59 = load.i16 notrap aligned v58
    v60 = iconst.i16 512
    v61 = band v59, v60  ; v60 = 512
    brif v61, block13, block14

block13 cold:
    call fn8(v57)  ; v57 = 1
    jump block15

block14:
    v62 = load.i64 notrap aligned v8
    v63 = load.i64 notrap aligned v8+8
    v64 = icmp eq v62, v63
    brif v64, block15, block16

block16:
    store.i32 notrap aligned v57, v62-16  ; v57 = 1
    jump block15

block15:
    v65 = stack_addr.i64 ss5
    v66 = iconst.i64 24
    v67 = iadd.i64 v1, v66  ; v66 = 24
    v68 = iconst.i64 3
    v69 = iconst.i8 1
    call fn9(v67, v68, v69, v65)  ; v68 = 3, v69 = 1
    v70 = stack_addr.i64 ss5
    call fn5(v70)
    v71 = stack_addr.i64 ss4
    v72 = stack_addr.i64 ss5
    v73 = load.i64 notrap aligned v72
    store notrap aligned v73, v71
    v74 = load.i64 notrap aligned v72+8
    store notrap aligned v74, v71+8
    v75 = load.i64 notrap aligned v72+16
    store notrap aligned v75, v71+16
    v76 = stack_addr.i64 ss4
    v77 = load.i32 notrap aligned v2
    v78 = iconst.i32 0
    v79 = iconst.i64 1
    v80 = iconst.i64 0
    v81 = stack_addr.i64 ss6
    v82 = symbol_value.i64 gv4
    v83 = call fn10(v82, v78, v28, v77, v76, v79, v80, v81)  ; v78 = 0, v79 = 1, v80 = 0
    brif v83, block1, block17

block17:
    v84 = stack_addr.i64 ss6
    v85 = load.i8 notrap aligned v84
    v86 = iconst.i8 16
    v87 = icmp uge v85, v86  ; v86 = 16
    brif v87, block18, block19

block18:
    call fn5(v84)
    jump block19

block19:
    v88 = load.i64 notrap aligned v8+24
    v89 = load.i64 notrap aligned v8+32
    v90 = isub v88, v89
    v91 = iconst.i64 24
    v92 = udiv v90, v91  ; v91 = 24
    v93 = icmp ugt v92, v56
    brif v93, block20, block21

block20 cold:
    call fn11(v56)
    jump block21

block21:
    v95 = iconst.i64 0
    store notrap aligned v95, v0  ; v95 = 0
    store notrap aligned v95, v0+8  ; v95 = 0
    store notrap aligned v95, v0+16  ; v95 = 0
    v96 = iconst.i32 0
    jump block22(v96)  ; v96 = 0

block1:
    v97 = iconst.i32 1
    jump block22(v97)  ; v97 = 1

block22(v94: i32):
    v98 = symbol_value.i64 gv2
    v99 = load.i16 notrap aligned v98
    v100 = iconst.i16 512
    v101 = band v99, v100  ; v100 = 512
    brif v101, block23, block24

block23 cold:
    call fn12()
    jump block25

block24:
    v102 = load.i64 notrap aligned v8
    v103 = load.i64 notrap aligned v8+8
    v104 = icmp eq v102, v103
    brif v104, block25, block26

block26:
    v105 = iconst.i64 -48
    v106 = iadd.i64 v102, v105  ; v105 = -48
    store notrap aligned v106, v8
    v107 = load.i32 notrap aligned v106+40
    v108 = iconst.i32 -1
    v109 = icmp eq v107, v108  ; v108 = -1
    brif v109, block25, block27

block27:
    v110 = load.i64 notrap aligned v8+24
    v111 = load.i64 notrap aligned v8+32
    v112 = isub v110, v111
    v113 = iconst.i64 24
    v114 = udiv v112, v113  ; v113 = 24
    v115 = uextend.i64 v107
    v116 = icmp ugt v114, v115
    brif v116, block28, block25

block28 cold:
    call fn11(v115)
    jump block25

block25:
    return v94
}

;; zeo_unit_init
function %zeo_unit_init() ccall {
    gv0 = symbol colocated %zeo_sym_rows
    gv1 = symbol colocated %zeo_callsite_callers
    gv2 = symbol colocated %zeo_syms
    gv3 = symbol colocated %zeo_callsites
    gv4 = symbol colocated %zeo_cm_sites
    gv5 = symbol colocated %zeo_const_sites
    gv6 = symbol colocated %zeo_new_sites
    gv7 = symbol colocated %zeo_dyn_sites
    sig0 = (i64, i64, i64) ccall
    sig1 = (i64, i64, i64) ccall
    sig2 = (i64, i64) ccall
    sig3 = (i64, i64) ccall
    sig4 = (i64, i64) ccall
    sig5 = (i64, i64) ccall
    fn0 = %zeo_rt_syms_init sig0
    fn1 = %zeo_rt_callsites_init sig1
    fn2 = %zeo_rt_cm_sites_init sig2
    fn3 = %zeo_rt_const_sites_init sig3
    fn4 = %zeo_rt_class_new_sites_init sig4
    fn5 = %zeo_rt_dyncaller_sites_init sig5

block0:
    v0 = symbol_value.i64 gv0
    v1 = iconst.i64 1
    v2 = symbol_value.i64 gv2
    call fn0(v0, v1, v2)  ; v1 = 1
    v3 = symbol_value.i64 gv3
    v4 = symbol_value.i64 gv1
    v5 = iconst.i64 1
    call fn1(v3, v4, v5)  ; v5 = 1
    return
}

;; main
function %main(i32, i64) -> i32 ccall {
    gv0 = symbol colocated %zeo_program_desc
    sig0 = (i32, i64, i64) -> i32 ccall
    fn0 = %zeo_rt_main sig0

block0(v0: i32, v1: i64):
    v2 = symbol_value.i64 gv0
    v3 = call fn0(v0, v1, v2)
    return v3
}
