crates/zeo/tests/suite/checks/snapshots/suite__checks__clif__clif_snapshot_hello.snap
---
source: crates/zeo/tests/suite/checks/clif.rs
assertion_line: 18
expression: "clif_of(\"puts \\\"Hello, world!\\\"\\n\")"
---
;; zeo_toplevel
function %zeo_toplevel(i64) -> i32 ccall {
    ss0 = explicit_slot 24, align = 8
    ss1 = explicit_slot 0, align = 8
    ss2 = explicit_slot 8, align = 8
    ss3 = explicit_slot 24, align = 8
    ss4 = explicit_slot 24, align = 8
    ss5 = explicit_slot 24, align = 8
    ss6 = explicit_slot 24, align = 8
    gv0 = symbol colocated %zeo_rodata
    gv1 = symbol colocated %zeo_syms
    gv2 = symbol %zeo_rt_gates
    gv3 = symbol %zeo_rt_pending_interrupts
    sig0 = () -> i64 ccall
    sig1 = (i64, i64, i64, i64, i32, i32) -> i32 ccall
    sig2 = (i64, i64, i64, i64, i32, i32) ccall
    sig3 = () -> i32 ccall
    sig4 = (i64) ccall
    sig5 = (i64) ccall
    sig6 = (i64, i64, i64, i64, i64, i64, i32, i32, i32, i64) ccall
    sig7 = (i32, i64, i64, i64, i64, i64, i32, i32) ccall
    sig8 = (i32) ccall
    sig9 = (i64, i64, i8 uext, i64) ccall
    sig10 = (i64, i64, i64) -> i32 ccall
    sig11 = (i64) ccall
    sig12 = () ccall
    fn0 = colocated %zeo_rt_frame_hot sig0
    fn1 = colocated %zeo_rt_frame_enter sig1
    fn2 = colocated %zeo_rt_frame_push sig2
    fn3 = colocated %zeo_rt_check_ints sig3
    fn4 = colocated %zeo_rt_main_object sig4
    fn5 = colocated %zeo_rt_pool_push sig5
    fn6 = colocated %zeo_rt_binding_new sig6
    fn7 = colocated %zeo_rt_const_set_at sig7
    fn8 = colocated %zeo_rt_set_line sig8
    fn9 = colocated %zeo_rt_str_lit_ro sig9
    fn10 = colocated %zeo_rt_kernel_puts sig10
    fn11 = colocated %zeo_rt_pool_reset sig11
    fn12 = colocated %zeo_rt_frame_pop sig12

block0(v0: i64):
    v1 = symbol_value.i64 gv0
    v2 = symbol_value.i64 gv1
    v3 = iconst.i64 2
    v4 = iconst.i64 2
    v5 = iadd v1, v4  ; v4 = 2
    v6 = iconst.i64 6
    v7 = iconst.i32 0
    v8 = call fn0()
    v9 = symbol_value.i64 gv2
    v10 = load.i16 notrap aligned v9
    v11 = iconst.i16 512
    v12 = band v10, v11  ; v11 = 512
    brif v12, block2, block3

block2 cold:
    v13 = call fn1(v1, v3, v5, v6, v7, v7)  ; v3 = 2, v6 = 6, v7 = 0, v7 = 0
    brif v13, block1, block5

block5:
    jump block4

block3:
    v14 = load.i64 notrap aligned v8
    v15 = load.i64 notrap aligned v8+16
    v16 = icmp eq v14, v15
    brif v16, block6, block7

block6 cold:
    call fn2(v1, v3, v5, v6, v7, v7)  ; v3 = 2, v6 = 6, v7 = 0, v7 = 0
    jump block8

block7:
    store.i64 notrap aligned v1, v14
    store.i64 notrap aligned v3, v14+8  ; v3 = 2
    store.i64 notrap aligned v5, v14+16
    store.i64 notrap aligned v6, v14+24  ; v6 = 6
    store.i32 notrap aligned v7, v14+32  ; v7 = 0
    store.i32 notrap aligned v7, v14+36  ; v7 = 0
    v17 = load.i64 notrap aligned v8+24
    v18 = load.i64 notrap aligned v8+32
    v19 = isub v17, v18
    v20 = iconst.i64 24
    v21 = udiv v19, v20  ; v20 = 24
    v22 = ireduce.i32 v21
    store notrap aligned v22, v14+40
    v23 = iconst.i32 0
    store notrap aligned v23, v14+44  ; v23 = 0
    v24 = iconst.i64 48
    v25 = iadd.i64 v14, v24  ; v24 = 48
    store notrap aligned v25, v8
    jump block8

block8:
    v26 = symbol_value.i64 gv3
    v27 = load.i32 notrap aligned v26
    brif v27, block9, block10

block9 cold:
    v28 = call fn3()
    brif v28, block1, block10

block10:
    jump block4

block4:
    v29 = stack_addr.i64 ss0
    call fn4(v29)
    call fn5(v29)
    v30 = stack_addr.i64 ss1
    v31 = iconst.i64 0
    v32 = stack_addr.i64 ss2
    v33 = iconst.i64 2
    v34 = iadd.i64 v1, v33  ; v33 = 2
    v35 = iconst.i64 6
    v36 = iconst.i32 0
    v37 = iconst.i32 0
    v38 = iconst.i32 -1
    v39 = stack_addr.i64 ss3
    call fn6(v29, v30, v32, v31, v34, v35, v36, v37, v38, v39)  ; v31 = 0, v35 = 6, v36 = 0, v37 = 0, v38 = -1
    v40 = stack_addr.i64 ss3
    v41 = load.i8 notrap aligned v40
    v42 = iconst.i8 16
    v43 = icmp uge v41, v42  ; v42 = 16
    brif v43, block11, block12

block11:
    call fn5(v40)
    jump block12

block12:
    v44 = iconst.i64 8
    v45 = iadd.i64 v1, v44  ; v44 = 8
    v46 = iconst.i64 16
    v47 = iconst.i64 2
    v48 = iadd.i64 v1, v47  ; v47 = 2
    v49 = iconst.i64 6
    v50 = iconst.i32 0
    v51 = iconst.i32 0
    v52 = iconst.i32 0
    call fn7(v50, v45, v46, v40, v48, v49, v51, v52)  ; v50 = 0, v46 = 16, v49 = 6, v51 = 0, v52 = 0
    v53 = load.i64 notrap aligned v8+24
    v54 = load.i64 notrap aligned v8+32
    v55 = isub v53, v54
    v56 = iconst.i64 24
    v57 = udiv v55, v56  ; v56 = 24
    v58 = iconst.i32 1
    v59 = symbol_value.i64 gv2
    v60 = load.i16 notrap aligned v59
    v61 = iconst.i16 512
    v62 = band v60, v61  ; v61 = 512
    brif v62, block13, block14

block13 cold:
    call fn8(v58)  ; v58 = 1
    jump block15

block14:
    v63 = load.i64 notrap aligned v8
    v64 = load.i64 notrap aligned v8+8
    v65 = icmp eq v63, v64
    brif v65, block15, block16

block16:
    store.i32 notrap aligned v58, v63-16  ; v58 = 1
    jump block15

block15:
    v66 = stack_addr.i64 ss5
    v67 = iconst.i64 24
    v68 = iadd.i64 v1, v67  ; v67 = 24
    v69 = iconst.i64 13
    v70 = iconst.i8 1
    call fn9(v68, v69, v70, v66)  ; v69 = 13, v70 = 1
    v71 = stack_addr.i64 ss5
    call fn5(v71)
    v72 = stack_addr.i64 ss4
    v73 = stack_addr.i64 ss5
    v74 = load.i64 notrap aligned v73
    store notrap aligned v74, v72
    v75 = load.i64 notrap aligned v73+8
    store notrap aligned v75, v72+8
    v76 = load.i64 notrap aligned v73+16
    store notrap aligned v76, v72+16
    v77 = stack_addr.i64 ss4
    v78 = iconst.i64 1
    v79 = stack_addr.i64 ss6
    v80 = call fn10(v77, v78, v79)  ; v78 = 1
    brif v80, block1, block17

block17:
    v81 = load.i64 notrap aligned v8+24
    v82 = load.i64 notrap aligned v8+32
    v83 = isub v81, v82
    v84 = iconst.i64 24
    v85 = udiv v83, v84  ; v84 = 24
    v86 = icmp ugt v85, v57
    brif v86, block18, block19

block18 cold:
    call fn11(v57)
    jump block19

block19:
    v88 = iconst.i64 0
    store notrap aligned v88, v0  ; v88 = 0
    store notrap aligned v88, v0+8  ; v88 = 0
    store notrap aligned v88, v0+16  ; v88 = 0
    v89 = iconst.i32 0
    jump block20(v89)  ; v89 = 0

block1:
    v90 = iconst.i32 1
    jump block20(v90)  ; v90 = 1

block20(v87: i32):
    v91 = symbol_value.i64 gv2
    v92 = load.i16 notrap aligned v91
    v93 = iconst.i16 512
    v94 = band v92, v93  ; v93 = 512
    brif v94, block21, block22

block21 cold:
    call fn12()
    jump block23

block22:
    v95 = load.i64 notrap aligned v8
    v96 = load.i64 notrap aligned v8+8
    v97 = icmp eq v95, v96
    brif v97, block23, block24

block24:
    v98 = iconst.i64 -48
    v99 = iadd.i64 v95, v98  ; v98 = -48
    store notrap aligned v99, v8
    v100 = load.i32 notrap aligned v99+40
    v101 = iconst.i32 -1
    v102 = icmp eq v100, v101  ; v101 = -1
    brif v102, block23, block25

block25:
    v103 = load.i64 notrap aligned v8+24
    v104 = load.i64 notrap aligned v8+32
    v105 = isub v103, v104
    v106 = iconst.i64 24
    v107 = udiv v105, v106  ; v106 = 24
    v108 = uextend.i64 v100
    v109 = icmp ugt v107, v108
    brif v109, block26, block23

block26 cold:
    call fn11(v108)
    jump block23

block23:
    return v87
}

;; main
function %main(i32, i64) -> i32 ccall {
    gv0 = symbol colocated %zeo_program_desc
    sig0 = (i32, i64, i64) -> i32 ccall
    fn0 = %zeo_rt_main sig0

block0(v0: i32, v1: i64):
    v2 = symbol_value.i64 gv0
    v3 = call fn0(v0, v1, v2)
    return v3
}
