crates/zeo/tests/suite/checks/snapshots/suite__checks__clif__clif_snapshot_safe_navigation.snap
---
source: crates/zeo/tests/checks/clif.rs
expression: "clif_of(\"x = ARGV[0]\\np x&.length\\n\")"
---
;; zeo_toplevel
function %zeo_toplevel(i64) -> i32 ccall {
    ss0 = explicit_slot 24, align = 8
    ss1 = explicit_slot 24, align = 8
    ss2 = explicit_slot 0, align = 8
    ss3 = explicit_slot 8, align = 8
    ss4 = explicit_slot 24, align = 8
    ss5 = explicit_slot 24, align = 8
    ss6 = explicit_slot 24, align = 8
    ss7 = explicit_slot 24, align = 8
    ss8 = explicit_slot 24, align = 8
    ss9 = explicit_slot 24, align = 8
    gv0 = symbol colocated %zeo_rodata
    gv1 = symbol colocated %zeo_syms
    gv2 = symbol %zeo_rt_gates
    gv3 = symbol %zeo_rt_pending_interrupts
    gv4 = symbol colocated %zeo_const_sites
    gv5 = symbol %zeo_rt_patched_bits
    gv6 = symbol colocated %zeo_callsites
    gv7 = symbol colocated %zeo_callsites
    gv8 = symbol colocated %zeo_callsites
    sig0 = () -> i64 ccall
    sig1 = (i64, i64, i64, i64, i32, i32) -> i32 ccall
    sig2 = (i64, i64, i64, i64, i32, i32) ccall
    sig3 = () -> i32 ccall
    sig4 = (i64) ccall
    sig5 = (i64) ccall
    sig6 = (i64, i64, i64, i64, i64, i64, i32, i32, i32, i64) ccall
    sig7 = (i32, i64, i64, i64, i64, i64, i32, i32) ccall
    sig8 = (i32) ccall
    sig9 = (i64, i64, i64, i64, i64, i64, i64, i8 uext, i32, i64) -> i32 ccall
    sig10 = (i64, i64, i64) ccall
    sig11 = (i64, i32, i64, i32, i64, i64, i64, i64) -> i32 ccall
    sig12 = (i64) ccall
    sig13 = (i64) ccall
    sig14 = () ccall
    fn0 = colocated %zeo_rt_frame_hot sig0
    fn1 = colocated %zeo_rt_frame_enter sig1
    fn2 = colocated %zeo_rt_frame_push sig2
    fn3 = colocated %zeo_rt_check_ints sig3
    fn4 = colocated %zeo_rt_main_object sig4
    fn5 = colocated %zeo_rt_pool_push sig5
    fn6 = colocated %zeo_rt_binding_new sig6
    fn7 = colocated %zeo_rt_const_set_at sig7
    fn8 = colocated %zeo_rt_set_line sig8
    fn9 = colocated %zeo_rt_const_get_cref_cached sig9
    fn10 = colocated %zeo_rt_array_aref_int sig10
    fn11 = colocated %zeo_rt_send_value_cached sig11
    fn12 = colocated %zeo_rt_release sig12
    fn13 = colocated %zeo_rt_pool_reset sig13
    fn14 = colocated %zeo_rt_frame_pop sig14

block0(v0: i64):
    v217 = iconst.i64 0
    v218 = stack_addr.i64 ss0
    store notrap aligned v217, v218  ; v217 = 0
    store notrap aligned v217, v218+8  ; v217 = 0
    store notrap aligned v217, v218+16  ; v217 = 0
    v1 = symbol_value.i64 gv0
    v2 = symbol_value.i64 gv1
    v3 = iconst.i64 2
    v4 = iconst.i64 2
    v5 = iadd v1, v4  ; v4 = 2
    v6 = iconst.i64 6
    v7 = iconst.i32 0
    v8 = call fn0()
    v9 = symbol_value.i64 gv2
    v10 = load.i16 notrap aligned v9
    v11 = iconst.i16 512
    v12 = band v10, v11  ; v11 = 512
    brif v12, block2, block3

block2 cold:
    v13 = call fn1(v1, v3, v5, v6, v7, v7)  ; v3 = 2, v6 = 6, v7 = 0, v7 = 0
    brif v13, block1, block5

block5:
    jump block4

block3:
    v14 = load.i64 notrap aligned v8
    v15 = load.i64 notrap aligned v8+16
    v16 = icmp eq v14, v15
    brif v16, block6, block7

block6 cold:
    call fn2(v1, v3, v5, v6, v7, v7)  ; v3 = 2, v6 = 6, v7 = 0, v7 = 0
    jump block8

block7:
    store.i64 notrap aligned v1, v14
    store.i64 notrap aligned v3, v14+8  ; v3 = 2
    store.i64 notrap aligned v5, v14+16
    store.i64 notrap aligned v6, v14+24  ; v6 = 6
    store.i32 notrap aligned v7, v14+32  ; v7 = 0
    store.i32 notrap aligned v7, v14+36  ; v7 = 0
    v17 = load.i64 notrap aligned v8+24
    v18 = load.i64 notrap aligned v8+32
    v19 = isub v17, v18
    v20 = iconst.i64 24
    v21 = udiv v19, v20  ; v20 = 24
    v22 = ireduce.i32 v21
    store notrap aligned v22, v14+40
    v23 = iconst.i64 48
    v24 = iadd.i64 v14, v23  ; v23 = 48
    store notrap aligned v24, v8
    jump block8

block8:
    v25 = symbol_value.i64 gv3
    v26 = load.i32 notrap aligned v25
    brif v26, block9, block10

block9 cold:
    v27 = call fn3()
    brif v27, block1, block10

block10:
    jump block4

block4:
    v28 = stack_addr.i64 ss1
    call fn4(v28)
    call fn5(v28)
    v29 = stack_addr.i64 ss2
    v30 = iconst.i64 0
    v31 = stack_addr.i64 ss3
    v32 = iconst.i64 2
    v33 = iadd.i64 v1, v32  ; v32 = 2
    v34 = iconst.i64 6
    v35 = iconst.i32 0
    v36 = iconst.i32 0
    v37 = iconst.i32 -1
    v38 = stack_addr.i64 ss4
    call fn6(v28, v29, v31, v30, v33, v34, v35, v36, v37, v38)  ; v30 = 0, v34 = 6, v35 = 0, v36 = 0, v37 = -1
    v39 = stack_addr.i64 ss4
    v40 = load.i8 notrap aligned v39
    v41 = iconst.i8 16
    v42 = icmp uge v40, v41  ; v41 = 16
    brif v42, block11, block12

block11:
    call fn5(v39)
    jump block12

block12:
    v43 = iconst.i64 8
    v44 = iadd.i64 v1, v43  ; v43 = 8
    v45 = iconst.i64 16
    v46 = iconst.i64 2
    v47 = iadd.i64 v1, v46  ; v46 = 2
    v48 = iconst.i64 6
    v49 = iconst.i32 0
    v50 = iconst.i32 0
    v51 = iconst.i32 0
    call fn7(v49, v44, v45, v39, v47, v48, v50, v51)  ; v49 = 0, v45 = 16, v48 = 6, v50 = 0, v51 = 0
    v52 = load.i64 notrap aligned v8+24
    v53 = load.i64 notrap aligned v8+32
    v54 = isub v52, v53
    v55 = iconst.i64 24
    v56 = udiv v54, v55  ; v55 = 24
    v57 = iconst.i32 1
    v58 = symbol_value.i64 gv2
    v59 = load.i16 notrap aligned v58
    v60 = iconst.i16 512
    v61 = band v59, v60  ; v60 = 512
    brif v61, block13, block14

block13 cold:
    call fn8(v57)  ; v57 = 1
    jump block15

block14:
    v62 = load.i64 notrap aligned v8
    v63 = load.i64 notrap aligned v8+8
    v64 = icmp eq v62, v63
    brif v64, block15, block16

block16:
    store.i32 notrap aligned v57, v62-16  ; v57 = 1
    jump block15

block15:
    v65 = iconst.i64 24
    v66 = iadd.i64 v1, v65  ; v65 = 24
    v67 = iconst.i64 1
    v68 = iconst.i64 28
    v69 = iadd.i64 v1, v68  ; v68 = 28
    v70 = iconst.i64 4
    v71 = iconst.i64 28
    v72 = iadd.i64 v1, v71  ; v71 = 28
    v73 = iconst.i64 4
    v74 = iconst.i8 0
    v75 = iconst.i32 0
    v76 = stack_addr.i64 ss5
    v77 = symbol_value.i64 gv4
    v78 = call fn9(v77, v66, v67, v69, v70, v72, v73, v74, v75, v76)  ; v67 = 1, v70 = 4, v73 = 4, v74 = 0, v75 = 0
    brif v78, block1, block17

block17:
    v79 = stack_addr.i64 ss5
    v80 = load.i8 notrap aligned v79
    v81 = iconst.i8 16
    v82 = icmp uge v80, v81  ; v81 = 16
    brif v82, block18, block19

block18:
    call fn5(v79)
    jump block19

block19:
    v83 = iconst.i64 0
    v84 = stack_addr.i64 ss6
    v85 = iconst.i8 2
    store notrap aligned v85, v84  ; v85 = 2
    store notrap aligned v83, v84+8  ; v83 = 0
    v86 = stack_addr.i64 ss6
    v87 = stack_addr.i64 ss7
    v88 = load.i8 notrap aligned v79
    v89 = iconst.i8 20
    v90 = icmp eq v88, v89  ; v89 = 20
    brif v90, block20, block24

block20:
    v91 = load.i8 notrap aligned v86
    v92 = iconst.i8 2
    v93 = icmp eq v91, v92  ; v92 = 2
    brif v93, block21, block24

block21:
    v94 = symbol_value.i64 gv2
    v95 = load.i16 notrap aligned v94
    v96 = iconst.i16 4
    v97 = band v95, v96  ; v96 = 4
    brif v97, block24, block22

block22:
    v98 = symbol_value.i64 gv5
    v99 = load.i64 notrap aligned v98
    v100 = iconst.i64 32
    v101 = band v99, v100  ; v100 = 32
    brif v101, block24, block23

block23:
    v102 = load.i64 notrap aligned v86+8
    call fn10(v79, v102, v87)
    jump block25

block24:
    v103 = load.i32 notrap aligned v2
    v104 = iconst.i32 0
    v105 = iconst.i64 1
    v106 = iconst.i64 0
    v107 = stack_addr.i64 ss8
    v108 = symbol_value.i64 gv6
    v109 = call fn11(v108, v104, v79, v103, v86, v105, v106, v107)  ; v104 = 0, v105 = 1, v106 = 0
    brif v109, block1, block26

block26:
    v110 = stack_addr.i64 ss8
    v111 = load.i64 notrap aligned v110
    store notrap aligned v111, v87
    v112 = load.i64 notrap aligned v110+8
    store notrap aligned v112, v87+8
    v113 = load.i64 notrap aligned v110+16
    store notrap aligned v113, v87+16
    jump block25

block25:
    v114 = stack_addr.i64 ss0
    v115 = load.i8 notrap aligned v114
    v116 = iconst.i8 16
    v117 = icmp uge v115, v116  ; v116 = 16
    brif v117, block27, block28

block27:
    call fn12(v114)
    jump block28

block28:
    v118 = stack_addr.i64 ss7
    v119 = load.i64 notrap aligned v118
    store notrap aligned v119, v114
    v120 = load.i64 notrap aligned v118+8
    store notrap aligned v120, v114+8
    v121 = load.i64 notrap aligned v118+16
    store notrap aligned v121, v114+16
    v122 = load.i64 notrap aligned v8+24
    v123 = load.i64 notrap aligned v8+32
    v124 = isub v122, v123
    v125 = iconst.i64 24
    v126 = udiv v124, v125  ; v125 = 24
    v127 = icmp ugt v126, v56
    brif v127, block29, block30

block29 cold:
    call fn13(v56)
    jump block30

block30:
    v128 = load.i64 notrap aligned v8+24
    v129 = load.i64 notrap aligned v8+32
    v130 = isub v128, v129
    v131 = iconst.i64 24
    v132 = udiv v130, v131  ; v131 = 24
    v133 = iconst.i32 2
    v134 = symbol_value.i64 gv2
    v135 = load.i16 notrap aligned v134
    v136 = iconst.i16 512
    v137 = band v135, v136  ; v136 = 512
    brif v137, block31, block32

block31 cold:
    call fn8(v133)  ; v133 = 2
    jump block33

block32:
    v138 = load.i64 notrap aligned v8
    v139 = load.i64 notrap aligned v8+8
    v140 = icmp eq v138, v139
    brif v140, block33, block34

block34:
    store.i32 notrap aligned v133, v138-16  ; v133 = 2
    jump block33

block33:
    v141 = stack_addr.i64 ss0
    v142 = stack_addr.i64 ss8
    v143 = load.i8 notrap aligned v141
    v144 = iconst.i8 0
    v145 = icmp eq v143, v144  ; v144 = 0
    brif v145, block35, block36

block35:
    v146 = iconst.i64 0
    store notrap aligned v146, v142  ; v146 = 0
    store notrap aligned v146, v142+8  ; v146 = 0
    store notrap aligned v146, v142+16  ; v146 = 0
    jump block37

block36:
    v147 = iconst.i64 0
    v148 = load.i32 notrap aligned v2+4
    v149 = iconst.i32 0
    v150 = iconst.i64 0
    v151 = iconst.i64 0
    v152 = stack_addr.i64 ss7
    v153 = symbol_value.i64 gv7
    v154 = iconst.i64 56
    v155 = iadd v153, v154  ; v154 = 56
    v156 = call fn11(v155, v149, v141, v148, v147, v150, v151, v152)  ; v149 = 0, v147 = 0, v150 = 0, v151 = 0
    brif v156, block1, block38

block38:
    v157 = stack_addr.i64 ss7
    v158 = load.i64 notrap aligned v157
    store notrap aligned v158, v142
    v159 = load.i64 notrap aligned v157+8
    store notrap aligned v159, v142+8
    v160 = load.i64 notrap aligned v157+16
    store notrap aligned v160, v142+16
    jump block37

block37:
    v161 = stack_addr.i64 ss8
    v162 = load.i8 notrap aligned v161
    v163 = iconst.i8 16
    v164 = icmp uge v162, v163  ; v163 = 16
    brif v164, block39, block40

block39:
    call fn5(v161)
    jump block40

block40:
    v165 = stack_addr.i64 ss9
    v166 = stack_addr.i64 ss8
    v167 = load.i64 notrap aligned v166
    store notrap aligned v167, v165
    v168 = load.i64 notrap aligned v166+8
    store notrap aligned v168, v165+8
    v169 = load.i64 notrap aligned v166+16
    store notrap aligned v169, v165+16
    v170 = stack_addr.i64 ss9
    v171 = load.i32 notrap aligned v2+8
    v172 = iconst.i32 0
    v173 = iconst.i64 1
    v174 = iconst.i64 0
    v175 = stack_addr.i64 ss5
    v176 = symbol_value.i64 gv8
    v177 = iconst.i64 112
    v178 = iadd v176, v177  ; v177 = 112
    v179 = call fn11(v178, v172, v28, v171, v170, v173, v174, v175)  ; v172 = 0, v173 = 1, v174 = 0
    brif v179, block1, block41

block41:
    v180 = stack_addr.i64 ss5
    v181 = load.i8 notrap aligned v180
    v182 = iconst.i8 16
    v183 = icmp uge v181, v182  ; v182 = 16
    brif v183, block42, block43

block42:
    call fn5(v180)
    jump block43

block43:
    v184 = load.i64 notrap aligned v8+24
    v185 = load.i64 notrap aligned v8+32
    v186 = isub v184, v185
    v187 = iconst.i64 24
    v188 = udiv v186, v187  ; v187 = 24
    v189 = icmp ugt v188, v132
    brif v189, block44, block45

block44 cold:
    call fn13(v132)
    jump block45

block45:
    v191 = iconst.i64 0
    store notrap aligned v191, v0  ; v191 = 0
    store notrap aligned v191, v0+8  ; v191 = 0
    store notrap aligned v191, v0+16  ; v191 = 0
    v192 = iconst.i32 0
    jump block46(v192)  ; v192 = 0

block1:
    v193 = iconst.i32 1
    jump block46(v193)  ; v193 = 1

block46(v190: i32):
    v194 = stack_addr.i64 ss0
    v195 = load.i8 notrap aligned v194
    v196 = iconst.i8 16
    v197 = icmp uge v195, v196  ; v196 = 16
    brif v197, block47, block48

block47:
    call fn12(v194)
    jump block48

block48:
    v198 = symbol_value.i64 gv2
    v199 = load.i16 notrap aligned v198
    v200 = iconst.i16 512
    v201 = band v199, v200  ; v200 = 512
    brif v201, block49, block50

block49 cold:
    call fn14()
    jump block51

block50:
    v202 = load.i64 notrap aligned v8
    v203 = load.i64 notrap aligned v8+8
    v204 = icmp eq v202, v203
    brif v204, block51, block52

block52:
    v205 = iconst.i64 -48
    v206 = iadd.i64 v202, v205  ; v205 = -48
    store notrap aligned v206, v8
    v207 = load.i32 notrap aligned v206+40
    v208 = iconst.i32 -1
    v209 = icmp eq v207, v208  ; v208 = -1
    brif v209, block51, block53

block53:
    v210 = load.i64 notrap aligned v8+24
    v211 = load.i64 notrap aligned v8+32
    v212 = isub v210, v211
    v213 = iconst.i64 24
    v214 = udiv v212, v213  ; v213 = 24
    v215 = uextend.i64 v207
    v216 = icmp ugt v214, v215
    brif v216, block54, block51

block54 cold:
    call fn13(v215)
    jump block51

block51:
    return v190
}

;; zeo_unit_init
function %zeo_unit_init() ccall {
    gv0 = symbol colocated %zeo_sym_rows
    gv1 = symbol colocated %zeo_callsite_callers
    gv2 = symbol colocated %zeo_syms
    gv3 = symbol colocated %zeo_callsites
    gv4 = symbol colocated %zeo_cm_sites
    gv5 = symbol colocated %zeo_const_sites
    gv6 = symbol colocated %zeo_new_sites
    gv7 = symbol colocated %zeo_dyn_sites
    sig0 = (i64, i64, i64) ccall
    sig1 = (i64, i64, i64) ccall
    sig2 = (i64, i64) ccall
    sig3 = (i64, i64) ccall
    sig4 = (i64, i64) ccall
    sig5 = (i64, i64) ccall
    fn0 = %zeo_rt_syms_init sig0
    fn1 = %zeo_rt_callsites_init sig1
    fn2 = %zeo_rt_cm_sites_init sig2
    fn3 = %zeo_rt_const_sites_init sig3
    fn4 = %zeo_rt_class_new_sites_init sig4
    fn5 = %zeo_rt_dyncaller_sites_init sig5

block0:
    v0 = symbol_value.i64 gv0
    v1 = iconst.i64 3
    v2 = symbol_value.i64 gv2
    call fn0(v0, v1, v2)  ; v1 = 3
    v3 = symbol_value.i64 gv3
    v4 = symbol_value.i64 gv1
    v5 = iconst.i64 3
    call fn1(v3, v4, v5)  ; v5 = 3
    v6 = symbol_value.i64 gv5
    v7 = iconst.i64 1
    call fn3(v6, v7)  ; v7 = 1
    return
}

;; main
function %main(i32, i64) -> i32 ccall {
    gv0 = symbol colocated %zeo_program_desc
    sig0 = (i32, i64, i64) -> i32 ccall
    fn0 = %zeo_rt_main sig0

block0(v0: i32, v1: i64):
    v2 = symbol_value.i64 gv0
    v3 = call fn0(v0, v1, v2)
    return v3
}
